[project]
name = "sumodl"
version = "0.1.0"
description = "Manage NHK Grand Sumo Videos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "playwright>=1.52.0",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "yt-dlp>=2025.5.22",
]

[dependency-groups]
dev = [
    "pyright>=1.1.401",
    "ruff>=0.11.11",
]
